Use javafx 21 and fix some jfoenix classes
Signed-off-by: HenrikJannsen <boilingfrog@gmx.com>