@@ -11,7 +11,10 @@ application {
                                  '-XX:MinHeapFreeRatio=5', '-XX:+UseStringDeduplication',
                                  '-Djava.net.preferIPv4Stack=true',
                                  '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
-                                 '--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED']
+                                 '--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED',
+                                 '--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
+                                 '--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
+                                 '--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED']
 }
 
 javafx {
